# etl_project_gdp

./: README.md  World_Economies.db  banks_project.py  etl_project_gdp.py  etl_project_log.txt  pyproject.toml
